# fitboy3000

./: README.md  manifest.xml
assetgen/: assetgen.py  pyproject.toml
resources/drawables/: drawables.xml
resources/layouts/: layout.xml
resources/settings/: properties.xml  settings.xml
resources/strings/: strings.xml
source/: Application.mc  View.mc
